unpackaged/main/default/objects/Account/fields/University_Name__c.field-meta.xml
<CustomField>
    <fullName>University_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_University Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrolled Students</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>