unpackaged/main/default/objects/Account/fields/Unofficial_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Unofficial_Transcript__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unofficial Transcript</label>
    <type>Checkbox</type>
</CustomField>