unpackaged/main/default/objects/Account/fields/Verto_Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Verto_Interview_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verto Interview Notes</label>
    <type>Checkbox</type>
</CustomField>