unpackaged/main/default/objects/Account/fields/Verto_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Verto_Student_ID__c</fullName>
    <displayFormat>V-{000000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Unique Verto Student ID V-XXXXXXXXX</inlineHelpText>
    <label>Verto Student ID</label>
    <type>AutoNumber</type>
</CustomField>