unpackaged/main/default/objects/Account/recordTypes/High_School_Account.recordType-meta.xml
<RecordType>
    <fullName>High_School_Account</fullName>
    <active>true</active>
    <description>This Account record type is used for High School or other educational institution Accounts.</description>
    <label>High School Account</label>
</RecordType>