unpackaged/main/default/objects/Account/recordTypes/University.recordType-meta.xml
<RecordType>
    <fullName>University</fullName>
    <active>true</active>
    <description>The default record type for all Universities and Colleges</description>
    <label>University</label>
</RecordType>