unpackaged/main/default/objects/Account/recordTypes/Verto_Account.recordType-meta.xml
<RecordType>
    <fullName>Verto_Account</fullName>
    <active>true</active>
    <description>This record type is used for student accounts</description>
    <label>Student Account</label>
</RecordType>