unpackaged/main/default/objects/Account/recordTypes/Verto_Company.recordType-meta.xml
<RecordType>
    <fullName>Verto_Company</fullName>
    <active>true</active>
    <description>This account record type is for Verto&#39;s only.</description>
    <label>Verto Company</label>
</RecordType>