unpackaged/main/default/objects/Account/listViews/Accounts_Missing_Submit_Docs_Form_Link.listView-meta.xml
<ListView>
    <fullName>Accounts_Missing_Submit_Docs_Form_Link</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Submit_Documents_Form__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Verto_Account</value>
    </filters>
    <filters>
        <field>Submit_Documents_Form__c</field>
        <operation>equals</operation>
    </filters>
    <label>Accounts Missing Submit Docs Form Link</label>
    <sharedTo>
        <role>Revenue_Operations</role>
    </sharedTo>
</ListView>