unpackaged/main/default/objects/Account/listViews/All_University_Accounts.listView-meta.xml
<ListView>
    <fullName>All_University_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Channel_Partner__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.University</value>
    </filters>
    <filters>
        <field>Partner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All University Accounts</label>
</ListView>