unpackaged/main/default/objects/Account/listViews/Channel_Partner_Accounts.listView-meta.xml
<ListView>
    <fullName>Channel_Partner_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel_Partner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Channel Partner Accounts</label>
</ListView>