unpackaged/main/default/objects/Account/listViews/FormStack_List_of_Partner_Schools.listView-meta.xml
<ListView>
    <fullName>FormStack_List_of_Partner_Schools</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>FormStack - List of Partner Schools</label>
    <sharedTo>
        <role>Revenue_Operations</role>
    </sharedTo>
</ListView>